# hackathon_vol.6_api

./: .gitignore  Dockerfile  README.md  ReadME.MD  docker-compose.yaml  pyproject.toml
FastAPI/: Readme.MD
FastAPI/api/routers/: task.py
api/: main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: .env  done.py  gpt.py  task.py
api/schemas/: gpt.py  task.py
